--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="{{ url_for('static', filename='job.ico') }}" type="image/x-icon">
         <title>Careers</title>
     </head>
     <body>
