--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="{{ url_for('static', filename='job.ico') }}" type="image/x-icon">
         <title>Careers</title>
     </head>
     <body>
-        Hello there, you'll learn about the job openings!
+        <h1>
+            nullToInfinity Careers
+        </h1>
+        <img src="../static/banner.jpg" height="320px">
+        <section id="about-us">
+            <h2>About Us</h2>
+            <p>Welcome to nullToInfinity, a pioneering software company that has been shaping the digital landscape since its inception five years ago. Established in 2015, we have been on a mission to redefine possibilities and drive innovation in the ever-evolving world of technology.</p>
+    
+            <p>At nullToInfinity, we believe in the power of transformative ideas and cutting-edge solutions. Our journey started with a vision to bridge the gap between imagination and implementation, and over the past five years, we have been turning that vision into reality.</p>
+    
+            <p>What sets us apart is our relentless commitment to excellence, fueled by a team of dedicated professionals who are passionate about pushing boundaries. Our diverse and talented workforce brings a wealth of expertise to the table, creating a dynamic environment where creativity thrives, and solutions come to life.</p>
+    
+            <p>Over the years, we have successfully delivered a wide array of software solutions, ranging from innovative applications to robust systems that cater to the unique needs of our clients. Our client-centric approach and unwavering dedication have earned us the trust of businesses across various industries.</p>
+    
+            <p>As we celebrate our five-year milestone, we express gratitude to our clients, partners, and the entire nullToInfinity family for their unwavering support. The journey thus far has been marked by challenges, triumphs, and continuous growth, and we are excited about the limitless possibilities that the future holds.</p>
+    
+            <p>Join us on this exciting adventure as we continue to push the boundaries of what's possible in the world of software development. Thank you for being part of the nullToInfinity story!</p>
+        </section>
 
+        <section>
+            <h2>Open Positions</h2>
+            <p>TODO -----</p>
+        </section>
+
+        <section>
+            <button>Contact Us</button>
+        </section>
     </body>
 </html>
