--- a/templates/home.html
+++ b/templates/home.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}" />
+
         <link rel="icon" href="{{ url_for('static', filename='job.ico') }}" type="image/x-icon">
-        <title>Careers</title>
+
+        <title>nullToInfinity Careers</title>
     </head>
     <body>
-        <h1>
+        <h1 class ="text-center">
             nullToInfinity Careers
         </h1>
+        
         <img src="../static/banner.jpg" height="320px">
         <section id="about-us">
             <h2>About Us</h2>
