--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,8 @@
         <h1 class ="text-center">
             nullToInfinity Careers
         </h1>
-        
+        <div id="container">
+
         <img src="../static/banner.jpg" height="320px">
         <section id="about-us">
             <h2>About Us</h2>
@@ -38,5 +39,7 @@
         <section>
             <button>Contact Us</button>
         </section>
+
+    </div>
     </body>
 </html>
