--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -8,6 +8,6 @@
           <p class="card-text">
             <b>Salary : </b> {{job['Salary']}}
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <button type="button" class="btn btn-outline-primary">Apply</button>
         </div>
 </div>
