--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-black text-light mt-4" style="box-shadow: 0 50vh 0 50vh #000000;">
-    <div class="container text-center">
-        <div class="row">
+    <div class="container text-center pt-2">
+        <div class="row ">
             <div class="col">
                 <a class="nav-link text-light" href="#">Home</a>
             </div>
@@ -10,9 +10,7 @@
             <div class="col">
                 <a class="nav-link text-light" href="#">Pricing</a>
             </div>
-            <div class="col">
-                <a class="nav-link disabled text-light" aria-disabled="true">Disabled</a>
-            </div>
+            
         </div>
         <p>&copy; 2023, nullToInfinity</p>
     </div>
