--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,9 @@
         </section>
 
         <section class="text-center mt-2">
-            <button type="button" class="btn btn-primary">Contact us</button>
+            <button type="button" class="btn btn-primary"> <a style="text-decoration: none; color: aliceblue;"   href="mailto:abdullahmoosa128@gmail.com?subject=Contact%20Us&?body=My%20name%20%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AContact%20%3A%20%3Cyour%20contact%3E%0D%0A%0D%0AThoughts%20to%20share%20%3A%20%3C%3E%0D%0A">
+                Contact Us
+            </a></button>
         </section>
         {% include 'footer.html' %}
     </div>
