--- a/templates/job.html
+++ b/templates/job.html
@@ -3,10 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{job.title}}</title>
+    <title>{{job.title}} - nullToInfinity Careers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" href="{{ url_for('static', filename='job.ico') }}" type="image/x-icon">
+    <style>
+        body {
+            padding: 20px;
+        }
+        h3 {
+            margin-top: 20px;
+        }
+        p {
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
+    {% include 'nav.html' %}
     
-    
+    <h1 class="text-center mt-4">
+        <i>nullToInfinity</i> Careers - {{job.title}}
+    </h1>
+
+    <div class="container">
+        <div class="row mt-4">
+            <div>
+                <h3>Title</h3>
+                <p>{{job.title}}</p>
+                <h3>Location</h3>
+                <p>{{job.location}}</p>
+                <h3>Salary</h3>
+                <p>{{job.salary}} {{job.currency}}</p>
+                <h3>Responsibilities</h3>
+                <p>{{job.responsibilities}}</p>
+                <h3>Requirements</h3>
+                <p>{{job.requirements}}</p>
+            </div>
+            <!-- <div class="col-md-6"> -->
+                <!-- Add any additional content or images here -->
+            <!-- </div> -->
+        </div>
+        
+        <section class="text-center mt-2">
+            <button type="button" class="btn btn-primary">
+                <a style="text-decoration: none; color: aliceblue;" href="mailto:abdullahmoosa128@gmail.com?subject=Apply%20for%20{{job.title}}&?body=My%20name%20%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AContact%20%3A%20%3Cyour%20contact%3E%0D%0A%0D%0AResume%20attached%20or%20details%20%3A%20%3C%3E%0D%0A">
+                    Apply Now
+                </a>
+            </button>
+        </section>
+
+        {% include 'footer.html' %}
+    </div>
 </body>
 </html>
