--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -8,7 +8,7 @@
           <p class="card-text">
             <b>Salary : </b> {{job['Salary']}}
           </p>
-          <button type="button" class="btn btn-outline-primary" > <a style="text-decoration: none;" href="mailto:abdullahmoosa128@gmail.com?subject=Application%20for%20{{job['title']}}&?body=My%20name%20%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20resume%20link%20%3A%20%3Cyour%20resume%20link%3E%0D%0A%0D%0AMy%20linkedIn%20link%20%3A%20%3Cyour%20linkedIn%20link%3E%0D%0A%0D%0AMy%20github%20link%20%3A%20%3Cyour%20github%20link%3E%0D%0A">
+          <button type="button" class="btn btn-outline-primary" > <a style="text-decoration: none;" href="/job/{{job['id']}}">
             Apply
           </a></button>
         </div>
