Added application submission page

--- a/templates/application_submitted.html
+++ b/templates/application_submitted.html
@@ -16,6 +16,9 @@
         p {
             font-size: 18px;
         }
+        b {
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
@@ -28,6 +31,7 @@
     <div class="container">
         <div class="row mt-4">
             <div>
+                <b>Your Application for the role "{{job['title']}}" has been recieved!</b>
                 <p>Thank you for submitting your application! We appreciate your interest in the position.</p>
                 <p>Here are the details you provided:</p>
                 <ul>
